--- a/html/index.html
+++ b/html/index.html
@@ -5,15 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura Dev Challenge</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
-        <img src="../img/logo-alura-dev.png" alt="" class="img-logo">
+        <div class="cabecalho">
+            <img src="../img/logo-alura-dev.png" alt="" class="img-logo">
+            <input type="text" class="search-field" placeholder="Busque por algo aqui...">
+             <img src="../img/profile-pic.png" alt="" class="profile">
+        </div>  
     </header>
-    <input type="text" class="search-field" placeholder="Busque por algo aqui...">
-    <img src="../img/profile-pic.png" alt="">
     <main>
 
     </main>
+    <aside>
+        
+    </aside>
 </body>
 </html>
