add basic structure side-menu

--- a/html/index.html
+++ b/html/index.html
@@ -66,5 +66,40 @@
         </div>
     </main>
 
+    <aside>
+        <div class="title-project">
+            <h1>Seu projeto</h1>
+        </div>
+        <div class="description-field">
+            <div class="name-project">
+                <input type="text">
+            </div>
+            <div class="description-proj">
+                <input type="text">
+            </div>
+        </div>
+
+        <div class="personalizing">
+            <h1>Personalização</h1>
+        </div>
+        <div class="lang-selector">
+            <label for="lang">Choose a language:</label>
+
+            <select name="lang" id="lang">
+              <option value="volvo">Java</option>
+              <option value="saab">Python</option>
+              <option value="mercedes">C#</option>
+              <option value="audi">PHP</option>
+            </select>
+        </div>
+        <div class="emppty-space">
+            <input type="text">
+        </div>
+
+        <div class="save-btn">
+            <button>Salvar projeto</button>
+        </div>
+    </aside>
+
 </body>
 </html>
