add save button

--- a/html/index.html
+++ b/html/index.html
@@ -96,9 +96,9 @@
                 <input type="color">
             </div>
     
-            <div class="save">
+            <div class="btn">
                 
-                <button>Salva projeto       
+                <button>Salvar projeto       
                 </button>
             </div>
         </div>
