finished static main-page

--- a/html/index.html
+++ b/html/index.html
@@ -63,6 +63,11 @@
                     </p>
             </div> 
             </div>
+
+        </div>
+
+        <div class="add-syntax-highlight">
+            <button>Visualizar com o highlight</button>
         </div>
     </main>
 
