add title and description code highlight

--- a/html/comunity.html
+++ b/html/comunity.html
@@ -66,6 +66,9 @@
                 <div class="container-title">
                     <h1>Título do projeto</h1>
                 </div>
+                <div class="description-proj">
+                    <p>Essa é a descrição do seu projeto.</p>
+                </div>
             </div>
         </div>
        
